<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/profile_image"
            android:layout_width="wrap_content"
            android:layout_height="400dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/img_zoe"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/profile_nickname_title"
            style="@style/profile_titlestyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/profile_smallmargin"
            android:gravity="center_horizontal"
            android:text="@string/profile_nickname_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/profile_name_title"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <TextView
            android:id="@+id/profile_name_title"
            style="@style/profile_titlestyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_smallmargin"
            android:layout_marginEnd="@dimen/profile_smallmargin"
            android:text="@string/profile_name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_image" />

        <TextView
            android:id="@+id/profile_name"
            style="@style/profile_contenttextstyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_smallmargin"
            android:layout_marginEnd="@dimen/profile_smallmargin"
            android:gravity="center_horizontal"
            android:text="@string/profile_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_name_title" />

        <TextView
            android:id="@+id/profile_nickname"
            style="@style/profile_contenttextstyle"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/profile_nickname"
            android:textSize="@dimen/profile_textcontentsize"
            app:layout_constraintEnd_toEndOf="@id/profile_nickname_title"
            app:layout_constraintStart_toStartOf="@id/profile_nickname_title"
            app:layout_constraintTop_toBottomOf="@+id/profile_nickname_title" />

        <TextView
            android:id="@+id/profile_aboutme_title"
            style="@style/profile_titlestyle"
            android:layout_width="368dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingTop="@dimen/profile_smallpadding"
            android:paddingBottom="@dimen/profile_smallpadding"
            android:text="@string/profile_aboutme"
            android:textSize="@dimen/profile_titletextsize"
            app:layout_constraintEnd_toEndOf="@id/profile_nickname_title"
            app:layout_constraintStart_toStartOf="@id/profile_name"
            app:layout_constraintTop_toBottomOf="@id/profile_name" />

        <TextView
            android:id="@+id/profile_info"
            style="@style/profile_contenttextstyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/profile_smallmargin"
            android:layout_marginEnd="@dimen/profile_smallmargin"
            android:gravity="left"
            android:text="@string/profile_info"
            android:textSize="@dimen/profile_textcontentsize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/profile_aboutme_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>